# archscope

./: .gitignore  CHANGELOG.md  LICENSE  README.en.md  README.ko.md  README.md  go.work  review_decisions.md  work_status.md
engines/python/: README.en.md  README.ko.md  README.md  archscope-engine.spec  pyproject.toml  setup.cfg
engines/python/archscope_engine/: __init__.py  app.py  cli.py  demo_site_mapping.py  demo_site_runner.py
engines/python/archscope_engine/ai_interpretation/: __init__.py  evaluation.py  evidence.py  (+4 more)
engines/python/benchmarks/: ci_benchmark_report.py  core_benchmark.py
engines/python/tests/: test_access_log_analyzer.py  test_access_log_parser.py  test_ai_interpretation.py  test_cli_e2e.py  test_collapsed_parser.py  test_demo_site.py  test_dotnet_clrstack_parser.py  test_file_utils.py  test_gc_log_parser.py  test_go_goroutine_parser.py  test_html_exporter.py  test_html_profiler_parser.py  test_java_jstack_enrichment.py  test_java_thread_dump_hardening.py  test_jfr_analyzer.py  test_jfr_parser.py  test_json_exporter.py  test_jvm_analyzers.py  test_lock_contention.py  test_multi_thread_framework.py  test_nodejs_report_parser.py  test_otel_analyzer.py  test_otel_parser.py  test_packaging_metadata.py  test_parser_debug_log.py  test_phase5_regression.py  test_profiler_analyzer.py  test_profiler_flamegraph_expansion.py  test_profiler_timeline.py  test_python_dump_parsers.py  test_report_followups.py  test_runtime_analyzers.py  test_statistics.py  test_svg_flamegraph_parser.py  test_thread_dump_registry_routing.py  test_thread_dump_to_collapsed.py
(+910 files in other folders)
