[metadata]
name = archscope-engine
version = 0.2.0b0
description = Python analysis engine for ArchScope
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = ArchScope contributors

[options]
packages = find:
include_package_data = true
python_requires = >=3.9
install_requires =
    typer>=0.12,<1.0
    rich>=13,<15
    fastapi>=0.110,<1.0
    uvicorn[standard]>=0.27,<1.0
    python-multipart>=0.0.9,<1.0
    defusedxml>=0.7,<1.0

[options.package_data]
archscope_engine.config =
    *.json

[options.extras_require]
dev =
    pytest>=8,<9
    pytest-cov>=6,<8
    ruff>=0.8,<1

[options.entry_points]
console_scripts =
    archscope-engine = archscope_engine.cli:main
